[REACTIVE] Fixed close thread problem